# rag-code-assistant

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  package.bat  package.sh  settings.json  update-embedder.bat  update-embedder.sh
clients/spa-client/: index.html  package.json  tsconfig.node.json  vite.config.ts
clients/spa-client/src/: App.svelte  app.css
clients/spa-client/src/lib/: utils.ts
clients/spa-client/src/lib/widgets/: Checkbox.svelte  InputArea.svelte
clients/spa-svelte/: index.html  package.json  tsconfig.app.json  vite.config.ts
clients/spa-svelte/public/hljs/: hljs-custom.min.js
clients/spa-svelte/src/: App.svelte  app.css  app.d.ts  global.d.ts
clients/spa-svelte/src/lib/: markdown.ts  store.ts  utils.ts
clients/spa-svelte/src/lib/widgets/: ChatPanel.svelte  Checkbox.svelte  ContextFiles.svelte  Dropdown.svelte  FileAttachments.svelte  InputArea.svelte  Statusbar.svelte  Toolbar.svelte
clients/webview/: CMakeLists.txt  README.md  app.aps  appconfig.json  build.bat  build_full.bat  build_full.sh  build_rel.bat  build_rel.sh  prefs.json
clients/webview/src/: main.cpp  procmngr.cpp  procmngr.h
include/: app.h  chunker.h  database.h  embedder.h  httpserver.h  inference.h  settings.h  sourceproc.h  tokenizer.h
src/: app.cpp  chunker.cpp  database.cpp  embedder.cpp  httpserver.cpp  inference.cpp  settings.cpp  sourceproc.cpp  tokenizer.cpp
